--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@strapi/plugin-users-permissions": "4.12.1",
     "@strapi/strapi": "4.12.1",
     "mysql": "2.18.1",
-    "strapi-content-type-explorer": "^0.1.1"
+    "strapi-content-type-explorer": "^0.1.1",
+    "strapi-plugin-custom-api": "^1.0.4"
   },
   "author": {
     "name": "A Strapi developer"
